# AgentsHub

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml  start-agenthub.bat
.claude/: settings.local.json
.claude/hooks/: agenthub_claude_stop.py  agenthub_hook_common.py
.codex/: hooks.json
.codex/hooks/: agenthub_codex_stop.py
.gemini/: settings.json
desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
desktop/prompts/: pair-acceptance.md  pair-initial.md  pair-turn.md
desktop/scripts/: dev.cjs  rebuild-node-pty.cjs  run-tool.cjs
desktop/src/main/: agent-command-parser.test.ts  agent-command-parser.ts  application-menu.test.ts  application-menu.ts  attachment-store.test.ts  attachment-store.ts  conversation-artifact-store.test.ts  conversation-artifact-store.ts  conversation-orchestrator.test.ts  conversation-orchestrator.ts  electron-sandbox.ts  (+56 more)
docs/: agenthub-api-coordinator.md  agenthub-hook-scripts.md  agenthub-manual-start.md  agenthub-pair-negotiation.md  agenthub-team-runtime.md  windows-node-pty-install.md
scripts/: start-electron.ps1  start-hmi.ps1
scripts/hooks/: agenthub_gemini_after_agent.py
src/agenthub/: __init__.py  main.py  orchestrator.py
tests/: test_agent_profiles.py  test_agenthub_hook_scripts.py  test_chat.py  test_headless_review.py  test_interactive_pty.py  test_main.py  test_main_window.py  test_orchestrator.py  test_output.py  test_output_buffer.py  test_pipe_backend.py  test_pty_backend.py  test_run_index.py  test_run_logs.py  test_screen_buffer.py  test_settings.py  test_tasks.py
(+87 files in other folders)
