[project]
name = "agenthub"
version = "0.1.0"
description = "Windows desktop HMI for managing local CLI agents"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pywinpty>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agenthub = "agenthub.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
